feat: apply export sheet
